--- a/index.html
+++ b/index.html
@@ -79,5 +79,6 @@
 </head>
   <body>
     <div id="root" class="h-screen w-screen relative"></div>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
